--- a/wp-content/themes/ozi_theme/sass/style.scss
+++ b/wp-content/themes/ozi_theme/sass/style.scss
@@ -10,7 +10,40 @@
   Text Domain: gulp-wordpress
 */
 
-body {
-    color: #fff;
-    background-color:blue;
+body{
+  color: #fff;
+}
+
+.container{
+  max-width: 1600px;
+}
+
+.header-content-wrapper{
+  background-image: url('./img/tlo-header.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  box-shadow: inset 0 0 0 1000px rgba(0,0,0,0.6);
+}
+
+nav{
+  padding-top: 60px;
+  padding-left: 60px;
+
+  .header-content-logo{
+    float: left;
   }
+
+  ul{
+    list-style-type: none;
+    line-height: 0px;
+    text-align: right;
+  li{
+    display: inline;
+    margin-right: 25px;
+    text-transform: uppercase;
+
+  }
+  }
+}
+
+
