--- a/wp-content/themes/ozi_theme/sass/style.scss
+++ b/wp-content/themes/ozi_theme/sass/style.scss
@@ -9,12 +9,15 @@
   License URI:
   Text Domain: gulp-wordpress
 */
+*{
+  box-sizing: border-box;
+}
 
 body{
   color: #fff;
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
+  font-family: 'Lato', sans-serif;
 }
 
 .clearfix:after {
@@ -30,6 +33,20 @@ body{
 .container{
   max-width: 1600px;
   
+}
+
+@mixin padding-sections{
+  padding: 50px 150px;
+}
+
+@mixin button{
+  margin-top: 50px;
+  background: #00aeed;
+  border: none;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 20px;
+  cursor: pointer;
 }
 
 .header-content-wrapper{
@@ -73,13 +90,19 @@ position: relative;
   .text-box{
     width:40%;
 
+
+    .text-box-header{
+      h2{
+        font-size: 30px;
+      }
+      h3{
+        font-size: 21px;
+      }
+    }
+
     button{
-      margin-top: 50px;
-      background: #00aeed;
-      border: none;
-      color: #fff;
-      padding: 10px 20px;
-      border-radius: 20px;
+      @include button;
+      
     }
   }
 
@@ -97,11 +120,9 @@ top: -150px;
 
 .first-section{
   background: #0081ff;
-  padding: 0 150px;
+  @include padding-sections;
 
-  .text-box{
-    padding: 50px 0;
-  }
+  
 
   .text-box-title{
   }
@@ -118,6 +139,51 @@ top: -150px;
         column-gap: 60px;
      }
   }
+
+  button{
+    @include button;
+    background: #3b4374;
+  }
 }
+
+.second-section{
+  @include padding-sections;
+  background: #007af3;
+  .header-center-wrapper-second-section{
+    text-align: center;
+  }
+  .content-horizontal-second-section{
+
+    ul{
+      list-style: none;
+      padding: 0;  
+      li{
+        display: inline-block;
+        width: 27%;
+        margin-right:8%;
+        text-align: left;
+        &:last-of-type{
+          margin-right:0%;
+        }
+
+      }
+      img{
+        float: left;
+        width:40px;
+        margin-bottom: 60px;
+        margin-right: 24px;
+      }
+      h3{
+        overflow: hidden;
+      }
+      p{
+        overflow: hidden;
+        
+      }
+    }
+  }
+
+}
+
 
 
