--- a/wp-content/themes/ozi_theme/style.css
+++ b/wp-content/themes/ozi_theme/style.css
@@ -9,12 +9,15 @@
   License URI:
   Text Domain: gulp-wordpress
 */
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
+
 body {
   color: #fff;
   padding: 0;
   margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box; }
+  font-family: 'Lato', sans-serif; }
 
 .clearfix:after {
   visibility: hidden;
@@ -60,13 +63,18 @@ nav {
   position: relative; }
   .header-content-text .text-box {
     width: 40%; }
+    .header-content-text .text-box .text-box-header h2 {
+      font-size: 30px; }
+    .header-content-text .text-box .text-box-header h3 {
+      font-size: 21px; }
     .header-content-text .text-box button {
       margin-top: 50px;
       background: #00aeed;
       border: none;
       color: #fff;
       padding: 10px 20px;
-      border-radius: 20px; }
+      border-radius: 20px;
+      cursor: pointer; }
   .header-content-text .img-box {
     position: absolute;
     right: 0;
@@ -77,9 +85,7 @@ nav {
 
 .first-section {
   background: #0081ff;
-  padding: 0 150px; }
-  .first-section .text-box {
-    padding: 50px 0; }
+  padding: 50px 150px; }
   .first-section .text-box-header h2 {
     margin: 0px; }
   .first-section .text-box-header p {
@@ -87,3 +93,37 @@ nav {
             column-count: 2;
     -webkit-column-gap: 60px;
             column-gap: 60px; }
+  .first-section button {
+    margin-top: 50px;
+    background: #00aeed;
+    border: none;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 20px;
+    cursor: pointer;
+    background: #3b4374; }
+
+.second-section {
+  padding: 50px 150px;
+  background: #007af3; }
+  .second-section .header-center-wrapper-second-section {
+    text-align: center; }
+  .second-section .content-horizontal-second-section ul {
+    list-style: none;
+    padding: 0; }
+    .second-section .content-horizontal-second-section ul li {
+      display: inline-block;
+      width: 27%;
+      margin-right: 8%;
+      text-align: left; }
+      .second-section .content-horizontal-second-section ul li:last-of-type {
+        margin-right: 0%; }
+    .second-section .content-horizontal-second-section ul img {
+      float: left;
+      width: 40px;
+      margin-bottom: 60px;
+      margin-right: 24px; }
+    .second-section .content-horizontal-second-section ul h3 {
+      overflow: hidden; }
+    .second-section .content-horizontal-second-section ul p {
+      overflow: hidden; }
